--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,8 +149,10 @@ services:
     environment:
       - SMF_CONFIG=${SMF_CONFIG?Variable not set}
       - SMF_DOMAIN=${DOMAIN?Variable not set}
+      - SMF_POSTFIX_mynetworks=10.0.0.0/8
       - SMF_POSTFIX_myhostname=mail.${DOMAIN?Variable not set}
       - SMF_POSTFIX_smtpd_tls_security_level=none
+      - SMF_POSTFIX_smtpd_client_restrictions=permit_mynetworks,reject
       #- SMF_POSTFIX_smtpd_recipient_restrictions=permit_mynetworks,permit_sasl_authenticated
       #- SMF_POSTFIX_smtpd_recipient_restrictions=permit_mynetworks
 
