--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,15 +145,14 @@ services:
         - traefik.tcp.routers.mail_relay_tls.entrypoints=smtptls
         - traefik.tcp.routers.mail_relay_tls.service=mail_relay
         - traefik.tcp.services.mail_relay_tls.loadbalancer.server.port=25
-
     environment:
       - SMF_CONFIG=${SMF_CONFIG?Variable not set}
       - SMF_DOMAIN=${DOMAIN?Variable not set}
       - SMF_POSTFIX_mynetworks=10.0.0.0/8
       - SMF_POSTFIX_myhostname=mail.${DOMAIN?Variable not set}
       - SMF_POSTFIX_smtpd_tls_security_level=none
-      - SMF_POSTFIX_smtpd_client_restrictions=permit_mynetworks,reject
-      #- SMF_POSTFIX_smtpd_recipient_restrictions=permit_mynetworks,permit_sasl_authenticated
+      #- SMF_POSTFIX_smtpd_client_restrictions=permit_mynetworks,reject
+      - SMF_POSTFIX_smtpd_recipient_restrictions=permit_mynetworks,permit_sasl_authenticated
       #- SMF_POSTFIX_smtpd_recipient_restrictions=permit_mynetworks
 
   swarmpit:
