--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -306,16 +306,14 @@ services:
   keycloak:
     image: quay.io/keycloak/keycloak:20.0.3
     environment:
-      - DB_VENDOR=MYSQL
-      - DB_ADDR=sso-mysql
-      - DB_PORT=3306
-      - DB_DATABASE=keycloak
-      - DB_USER=keycloak
-      - DB_PASSWORD=keycloak-db-password
+      - KC_DB=mysql
+      - KC_DB_URL=jdbc:mysql://sso-mysql:3306/keycloak
+      - KC_DB_USERNAME=keycloak
+      - KC_DB_PASSWORD=keycloak-db-password
+      - KC_HOSTNAME=sso.${DOMAIN?Variable not set}
+      - KC_PROXY=edge
       - KEYCLOAK_ADMIN=${KEYCLOAK_ADMIN_USERNAME?Variable not set}
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD?Variable not set}
-      - PROXY_ADDRESS_FORWARDING=true
-      - KEYCLOAK_HOSTNAME=sso.${DOMAIN?Variable not set}
     networks:
       - sso
       - traefik-public
