Try to enable health check for Keycloak

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -312,8 +312,16 @@ services:
       - KC_DB_PASSWORD=keycloak-db-password
       - KC_HOSTNAME=sso.${DOMAIN?Variable not set}
       - KC_PROXY=edge
+      - KC_HEALTH_ENABLED="true"
+      - KC_LOG_LEVEL=info
       - KEYCLOAK_ADMIN=${KEYCLOAK_ADMIN_USERNAME?Variable not set}
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD?Variable not set}
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/health/ready" ]
+      interval: 15s
+      timeout: 2s
+      retries: 15
+    command: start --optimized
     networks:
       - sso
       - traefik-public
