Try to add docker-gc-cron

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -346,6 +346,24 @@ services:
         - traefik.http.routers.keycloak-https.tls.certresolver=le
         - traefik.http.services.keycloak.loadbalancer.server.port=8080
 
+  # Docker-GC - Automatic Docker Garbage Collection 
+  dockergc:
+    image: clockworksoul/docker-gc-cron:0.3.4
+    container_name: docker-gc
+    hostname: docker-gc
+    restart: unless-stopped
+    network_mode: none
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      CRON: 0 0 * * *
+      FORCE_IMAGE_REMOVAL: 1
+      FORCE_CONTAINER_REMOVAL: 0
+      GRACE_PERIOD_SECONDS: 604800
+      DRY_RUN: 0
+      CLEAN_UP_VOLUMES: 1
+      TZ: ${TZ?Variable not set}
+
 volumes:
   db-data:
     driver: local
