--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,7 +109,7 @@ services:
     environment:
       - DELETE_IMAGES=true
       - REGISTRY_TITLE=My Docker Registry
-      - REGISTRY_URL=http://registry:5000
+      - REGISTRY_URL=http://${REGISTRY_DOMAIN}:5000
       - SINGLE_REGISTRY=true
     networks:
       - traefik-public
