--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -298,7 +298,7 @@ services:
       MYSQL_PASSWORD: keycloak-db-password
 
   keycloak:
-    image: quay.io/keycloak/keycloak:21.0
+    image: quay.io/keycloak/keycloak:23.0
     environment:
       - KC_DB=mysql
       - KC_DB_URL_HOST=sso-mysql
@@ -308,7 +308,8 @@ services:
       - KC_DB_PASSWORD=keycloak-db-password
       - KC_HOSTNAME=sso.${DOMAIN?Variable not set}
       - KC_PROXY=edge
-      - KC_HEALTH_ENABLED="true"
+      - KC_HEALTH_ENABLED=true
+      - KC_METRICS_ENABLED=true
       - KC_LOG_LEVEL=info
       - KEYCLOAK_ADMIN=${KEYCLOAK_ADMIN_USERNAME?Variable not set}
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD?Variable not set}
