Forgot image in previous commit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -286,7 +286,7 @@ services:
       - traefik-public
 
   sso-mariadb:
-    image: mysql:8
+    image: mariadb:11
     volumes:
       - sso-mysql-data:/var/lib/mariadb
     networks:
