--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -285,23 +285,24 @@ services:
     networks:
       - traefik-public
 
-  sso-mysql:
-    image: mysql:8
+  sso-mariadb:
+    image: mariadb:11
     volumes:
-      - sso-mysql-data:/var/lib/mysql
+      - sso-mysql-data:/var/lib/mariadb
     networks:
       - sso
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: keycloak
-      MYSQL_USER: keycloak
-      MYSQL_PASSWORD: keycloak-db-password
+      MARIADB_ROOT_PASSWORD: root
+      MARIADB_DATABASE: keycloak
+      MARIADB_USER: keycloak
+      MARIADB_PASSWORD: keycloak-db-password
+      MARIADB_AUTO_UPGRADE: 1
 
   keycloak:
     image: quay.io/keycloak/keycloak:24.0
     environment:
-      - KC_DB=mysql
-      - KC_DB_URL_HOST=sso-mysql
+      - KC_DB=mariadb
+      - KC_DB_URL_HOST=sso-mariadb
       - KC_DB_URL_DATABASE=keycloak
       - KC_DB_URL_PORT=3306
       - KC_DB_USERNAME=keycloak
@@ -323,7 +324,7 @@ services:
       - sso
       - traefik-public
     depends_on:
-      - sso-mysql
+      - sso-mariadb
     deploy:
       placement:
         constraints:
