Re-add autoupgrade for MariaDB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -296,6 +296,7 @@ services:
       MARIADB_DATABASE: keycloak
       MARIADB_USER: keycloak
       MARIADB_PASSWORD: keycloak-db-password
+      MARIADB_AUTO_UPGRADE: 1
 
   keycloak:
     image: quay.io/keycloak/keycloak:24.0
