--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -152,7 +152,7 @@ services:
   swarmpit:
     image: swarmpit/swarmpit:latest
     environment:
-      - SWARMPIT_DB=http://db:5984
+      - SWARMPIT_DB=http://swarmpit:swarmpit@couchdb:5984
       - SWARMPIT_INFLUXDB=http://influxdb:8086
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -183,8 +183,11 @@ services:
         - traefik.http.routers.swarmpit-https.tls.certresolver=le
         - traefik.http.services.swarmpit.loadbalancer.server.port=8080
 
-  db:
+  couchdb:
     image: couchdb:3
+    environment:
+      - COUCHDB_USER=swarmpit
+      - COUCHDB_PASSWORD=swarmpit
     volumes:
       - db-data:/opt/couchdb/data
     networks:
