--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -368,18 +368,12 @@ services:
         - traefik.docker.network=traefik-public
         - traefik.constraint-label=traefik-public
         # Router for the DNS Server Web UI, on port 1443
-        - traefik.http.routers.doh-ui-https.rule=Host(`dns-ui.${DOMAIN?Variable not set}`)
+        - traefik.http.routers.doh-ui-https.rule=Host(`dns.${DOMAIN?Variable not set}`)
         - traefik.http.routers.doh-ui-https.entrypoints=https
         - traefik.http.routers.doh-ui-https.tls=true
         - traefik.http.routers.doh-ui-https.tls.certresolver=le
-        # Router for the DNS-over-HTTPS endpoint, on port 1443
-        - traefik.http.routers.doh-https.rule=Host(`dns.${DOMAIN?Variable not set}`)
-        - traefik.http.routers.doh-https.entrypoints=doh-https
-        - traefik.http.routers.doh-https.tls=true
-        - traefik.http.routers.doh-https.tls.certresolver=le
-        - traefik.http.routers.doh-https.service=doh-service
         # Define the service for Traefik to connect to
-        - traefik.http.services.doh-service.loadbalancer.server.port=5380
+        - traefik.http.services.doh-service.loadbalancer.server.port=80
 
   # Docker-GC - Automatic Docker Garbage Collection
   dockergc:
