--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -367,15 +367,17 @@ services:
         - traefik.enable=true
         - traefik.docker.network=traefik-public
         - traefik.constraint-label=traefik-public
-        - traefik.http.routers.doh-https.rule=Host(`dns-ui.${DOMAIN?Variable not set}`)
-        - traefik.http.routers.doh-https.entrypoints=https
-        - traefik.http.routers.doh-https.tls=true
-        - traefik.http.routers.doh-https.tls.certresolver=le
-        - traefik.http.services.doh-ui.loadbalancer.server.port=5380
+        - traefik.http.routers.dns-ui-https.rule=Host(`dns-ui.${DOMAIN?Variable not set}`)
+        - traefik.http.routers.dns-ui-https.entrypoints=https
+        - traefik.http.routers.dns-ui-https.tls=true
+        - traefik.http.routers.dns-ui-https.tls.certresolver=le
+        - traefik.http.routers.dns-ui-https.service=dns-ui
+        - traefik.http.services.dns-ui.loadbalancer.server.port=5380
         - traefik.http.routers.doh-https.rule=Host(`dns.${DOMAIN?Variable not set}`)
         - traefik.http.routers.doh-https.entrypoints=https
         - traefik.http.routers.doh-https.tls=true
         - traefik.http.routers.doh-https.tls.certresolver=le
+        - traefik.http.routers.doh-https.service=doh-dns
         - traefik.http.services.doh-dns.loadbalancer.server.port=80
 
   # Docker-GC - Automatic Docker Garbage Collection
