--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,8 @@ jobs:
         envkey_DOH_ADMIN_PASSWORD: ${{ secrets.DOH_ADMIN_PASSWORD }}
         envkey_KEYCLOAK_ADMIN_USERNAME: ${{ secrets.KEYCLOAK_ADMIN_USERNAME }}
         envkey_KEYCLOAK_ADMIN_PASSWORD: ${{ secrets.KEYCLOAK_ADMIN_PASSWORD }}
+        envkey_UMAMI_DB_PASSWORD: ${{ secrets.UMAMI_DB_PASSWORD }}
+        envkey_UMAMI_APP_SECRET: ${{ secrets.UMAMI_APP_SECRET }}
         file_name: .env
 
     - name: Deploy to Docker swarm
