--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -572,3 +572,46 @@ networks:
   signoz:
     driver: overlay
     attachable: true
+
+configs:
+  otel-collector-config:
+    content: |
+      receivers:
+        otlp:
+          protocols:
+            http:
+              endpoint: 0.0.0.0:4318
+            grpc:
+              endpoint: 0.0.0.0:4317
+
+      processors:
+        batch:
+          timeout: 1s
+          send_batch_size: 1024
+
+      exporters:
+        clickhousemetrics:
+          endpoint: tcp://clickhouse:9000
+          database: signoz
+          username: signoz
+          password: ${CLICKHOUSE_PASSWORD}
+          ttl: 168h
+        otlp:
+          endpoint: signoz:4317
+          tls:
+            insecure: true
+
+      service:
+        pipelines:
+          metrics:
+            receivers: [otlp]
+            processors: [batch]
+            exporters: [clickhousemetrics]
+          traces:
+            receivers: [otlp]
+            processors: [batch]
+            exporters: [otlp]
+          logs:
+            receivers: [otlp]
+            processors: [batch]
+            exporters: [otlp]
