replace signoz by victoria metrics

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,9 +34,9 @@ jobs:
         envkey_KEYCLOAK_ADMIN_PASSWORD: ${{ secrets.KEYCLOAK_ADMIN_PASSWORD }}
         envkey_UMAMI_DB_PASSWORD: ${{ secrets.UMAMI_DB_PASSWORD }}
         envkey_UMAMI_APP_SECRET: ${{ secrets.UMAMI_APP_SECRET }}
-        envkey_CLICKHOUSE_PASSWORD: ${{ secrets.CLICKHOUSE_PASSWORD }}
         envkey_OTEL_API_USER: ${{ secrets.OTEL_API_USER }}
         envkey_OTEL_API_HASH: ${{ secrets.OTEL_API_HASH }}
+        envkey_GRAFANA_ADMIN_PASSWORD: ${{ secrets.GRAFANA_ADMIN_PASSWORD }}
         file_name: .env
 
     - name: Deploy to Docker swarm
